clang/test/BSC/Coroutine/Treetransform/DeclStmt/Common/variable_undeclared.cbs
// RUN: %clang_cc1 -verify %s

#include "../../../async-func-read-opposite.hbs"

async int f(int start) { 
  int result = await read(r1); // expected-error {{use of undeclared identifier 'r1'}}
                               // expected-error@-1 {{initializing 'int' with an expression of incompatible type '<dependent type>'}}   
  return result;
}

int main() {
  return 0;
}
